# Motal-Decomposition

./: README.md  Template  Template_Generate.py  pyproject.toml  requirements.txt  test.py
COLOR/: color_define.py  colorful_print.py
Modal_Decomposition/: CEEFD.py  CEEMD.py  EEMD.py  EFD.py  EMD.py  EWT.py  FMD.py  ICEEMDAN.py  LMD.py  MEMD.py  README.md  RPSEMD.py  SSA.py  SVMD.py  VMD.py  __init__.py  help_function.py
Modal_Decomposition/COLOR/: __init__.py  color_define.py  colorful_print.py
docs/: FunctionTemplate  Template_Generate.py
src/Modal_Decomposition/: CEEFD.py  CEEMD.py  CEEMDAN.py  EEMD.py  EFD.py  EMD.py  EWT.py  FMD.py  ICEEMDAN.py  LMD.py  MEMD.py  RPSEMD.py  SSA.py  SVMD.py  VMD.py  __init__.py
src/Modal_Decomposition/Utils/: LazyImport.py  OneDimArray.py  __init__.py
tests/: test.py
